Moved options to menu bar and styled them, fixed Streetview not showing problem

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -18,7 +18,7 @@ ul.topnav li {
 	position: relative; /*--Declare X and Y axis base for sub navigation--*/
 }
 
-ul.topnav li a{
+ul.topnav li a {
 	padding: 10px 5px;
 	color: #000;
 	display: block;
@@ -73,4 +73,8 @@ html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
 .container-image-tick {
 	width: 20px;
 	height: 20px;
+}
+
+.config {
+	cursor: pointer;
 }
